--- a/_posts/2023-10-05-week1-day2.md
+++ b/_posts/2023-10-05-week1-day2.md
@@ -16,6 +16,8 @@ category: biostat216fall2023
 
 ![](https://github.com/ucla-biostat-216/2023fall/blob/858988d0c8e927391ca89e6d46af787dd16c3be0/_posts/idre_workshops_2023fall.png)
 
+* Coordinates of LA.
+
 ## Today
 
 * Vectors (BV Chapters 1-3).
