--- a/slides/02-vector/02-vector.ipynb
+++ b/slides/02-vector/02-vector.ipynb
@@ -2774,25 +2774,30 @@
     "\\mathbf{q}_j' \\tilde{\\mathbf{q}}_i = \\mathbf{q}_j' \\mathbf{a}_i - (\\mathbf{q}_1' \\mathbf{a}_i) (\\mathbf{q}_j' \\mathbf{q}_1) - \\cdots - (\\mathbf{q}_{i-1}' \\mathbf{a}_i) (\\mathbf{q}_j' \\mathbf{q}_{i-1}) = \\mathbf{q}_j' \\mathbf{a}_i - \\mathbf{q}_j' \\mathbf{a}_i = 0.\n",
     "$$\n",
     "\n",
-    "- So $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$ are orthogonal. The normalization step enures $\\mathbf{q}_i$ is normal.\n",
+    "- So $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$ are orthogonal. The normalization step ensures $\\mathbf{q}_i$ is normal.\n",
     "\n",
     "Suppose G-S has not terminated by iteration $i$, then \n",
     "\n",
     "- $\\mathbf{a}_i$ is a combination of $\\mathbf{q}_1, \\ldots, \\mathbf{q}_i$, and\n",
     "\n",
-    "- $\\mathbf{q}_i$ is a combination of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_i$.\n",
-    "\n",
+    "- $\\mathbf{q}_i$ is a combination of $\\mathbf{a}_1, \\ldots, \\mathbf{a}_i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Computational complexity of G-S algorithm:\n",
     "\n",
-    "- Step 1 of iteration $i$ requires $i-1$ inner products, $\\mathbf{q}_1' \\mathbf{a}_i, \\ldots, \\mathbf{q}_{i-1}' \\mathbf{a}_i$, which costs $(i-1)(2n-1)$ flops.  \n",
+    "- Step 1 of iteration $i$ requires (1) $i-1$ inner products, $\\mathbf{q}_1' \\mathbf{a}_i, \\ldots, \\mathbf{q}_{i-1}' \\mathbf{a}_i$, which costs $(i-1)(2n-1)$ flops, (2) $2n(i-1)$ flops to compute $\\tilde{\\mathbf{q}}_i$\n",
     "\n",
-    "- Step 2 of iteration $i$ requires $2n(i-1)$ flops to compute $\\tilde{\\mathbf{q}}_i$.  \n",
+    "- Step 2 of iteration $i$ requires less than $n$ flops.  \n",
     "\n",
-    "- Step 3 of iteration $i$ requires $3n$ flops to compute $\\|\\tilde{\\mathbf{q}}_i\\|$ and $\\mathbf{q}_i$. \n",
+    "- Step 3 of iteration $i$ requires $3n$ flops to normalize $\\|\\tilde{\\mathbf{q}}_i\\|$. \n",
     "\n",
-    "- Assuming no early termination, total computational cost is:\n",
+    "- Assuming no early termination, total computational cost of the GS algorithm to orthonormalize a set of $k$ vectors in $\\mathbb{R}^n$ is:\n",
     "$$\n",
-    "\\sum_{i=1}^k [(4n-1) (i - 1) + 3n] = (4n - 1) \\frac{k(k-1)}{2} + 3nk \\approx 2nk^2,\n",
+    "\\sum_{i=1}^k [(4n-1) (i - 1) + 3n] = (4n - 1) \\frac{k(k-1)}{2} + 3nk \\approx 2nk^2 = O(nk^2),\n",
     "$$\n",
     "using $\\sum_{i=1}^k (i - 1) = k(k-1)/2$. "
    ]
