add url to IDRE workshops registration

--- a/_posts/2023-10-05-week1-day2.md
+++ b/_posts/2023-10-05-week1-day2.md
@@ -12,7 +12,7 @@ category: biostat216fall2023
 
 * TA OH: Wed 5pm-6pm (TBD), Fri 2pm-3pm (Zoom).
 
-* IDRE Workshops.
+* IDRE Workshops. [flyer](https://github.com/ucla-biostat-216/2023fall/blob/858988d0c8e927391ca89e6d46af787dd16c3be0/_posts/idre_workshops_2023fall.png), register at [here](https://oarc.ucla.edu/events).
 
 ![](https://github.com/ucla-biostat-216/2023fall/blob/858988d0c8e927391ca89e6d46af787dd16c3be0/_posts/idre_workshops_2023fall.png)
 
