typos in Q2 (AM-GM should be AM-HM)

--- a/hw/hw2/hw2.ipynb
+++ b/hw/hw2/hw2.ipynb
@@ -23,13 +23,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook or Quarto) to Gradescope in BruinLearn. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Submit a PDF (scanned/photographed from handwritten solutions, or converted from RMarkdown or Jupyter Notebook or Quarto) to Gradescope in BruinLearn. \n",
+    "\n",
     "## Q1. Average and norm\n",
     "\n",
     "Use the Cauchy-Schwarz inequality to prove that\n",
@@ -38,14 +33,9 @@
     "$$\n",
     "for any $\\mathbf{x} \\in \\mathbb{R}^n$. In other words, $-\\operatorname{rms}(\\mathbf{x}) \\le \\operatorname{avg}(\\mathbf{x}) \\le \\operatorname{rms}(\\mathbf{x})$.\n",
     "\n",
-    "What are the conditions on $\\mathbf{x}$ to have equality in the upper bound? When do we have equality in the lower bound?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Q2. AM-GM inequality\n",
+    "What are the conditions on $\\mathbf{x}$ to have equality in the upper bound? When do we have equality in the lower bound?\n",
+    "\n",
+    "## Q2. AM-HM inequality\n",
     "\n",
     "Use the Cauchy-Schwartz inequality to prove that\n",
     "$$\n",
@@ -53,13 +43,8 @@
     "$$\n",
     "for any $\\mathbf{x} \\in \\mathbb{R}^n$ with positive entries $x_i$. \n",
     "\n",
-    "The left hand side is called the arithmetic mean (AM) and the right hand side is called the geometric mean (GM). You may wonder what can be a practical use of such a simple inequality. See this [paper](http://hua-zhou.github.io/media/pdf/LangeZhou14GP.pdf), which uses the AM-GM inequality to derive a class of optimization algorithms for geometric and signomial programming."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The left hand side is called the arithmetic mean (AM) and the right hand side is called the harmonic mean (HM). You may wonder what can be a practical use of such a simple inequality. See this [paper](http://hua-zhou.github.io/media/pdf/LangeZhou14GP.pdf), which uses the AM-GM inequality to derive a class of optimization algorithms for geometric and signomial programming.\n",
+    "\n",
     "## Q3. Sub-multiplicity for matrix norm\n",
     "\n",
     "Show the norm property \n",
@@ -68,13 +53,8 @@
     "$$ \n",
     "for the Frobenius norm. Hint: Cauchy-Schwartz inequality.\n",
     "\n",
-    "BV exercise 6.14 is a special case of this result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "BV exercise 6.14 is a special case of this result.\n",
+    "\n",
     "## Q4. $k$-means clustering\n",
     "\n",
     "Read BV Chapter 4.\n",
@@ -178,9 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## BV exercises\n",
     "\n",
