update url to the GS algorithm

--- a/_posts/2023-10-12-week2-day2.md
+++ b/_posts/2023-10-12-week2-day2.md
@@ -8,8 +8,12 @@ category: biostat216fall2023
 
 * HW2 due this Friday 11:59pm on Gradescope/BruinLearn.
 
-* $k$-means clustering.
+* $k$-means clustering. BV p75.
+
+* Midterm: practice problems.
 
 ## Today
 
 * Matrices (BV Chapters 6-10).
+
+* Vector space.
