--- a/slides/04-vecsp/04-vecsp.ipynb
+++ b/slides/04-vecsp/04-vecsp.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {
-    "toc": "true"
-   },
+   "metadata": {},
    "source": [
     "---\n",
     "title: Vector space\n",
@@ -69,13 +67,8 @@
     "- A **vector space** or **linear space** or **linear subspace** or **subspace** $\\mathcal{S} \\subseteq \\mathbb{R}^n$ is a set of vectors in $\\mathbb{R}^n$ that are closed under addition and scalar multiplication. In other words, $\\mathcal{S}$ must satisfy  \n",
     "    1. If $\\mathbf{x}, \\mathbf{y} \\in \\mathcal{S}$, then $\\mathbf{x} + \\mathbf{y} \\in \\mathcal{S}$.  \n",
     "    2. If $\\mathbf{x} \\in \\mathcal{S}$, then $\\alpha \\mathbf{x} \\in \\mathcal{S}$ for any $\\alpha \\in \\mathbb{R}$.    \n",
-    "    Or equivalently the set is closed under _axpy_ operation. $\\alpha \\mathbf{x} + \\mathbf{y} \\in \\mathcal{S}$ for all $\\mathbf{x}, \\mathbf{y} \\in \\mathcal{S}$ and $\\alpha \\in \\mathbb{R}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Or equivalently the set is closed under _axpy_ operation. $\\alpha \\mathbf{x} + \\mathbf{y} \\in \\mathcal{S}$ for all $\\mathbf{x}, \\mathbf{y} \\in \\mathcal{S}$ and $\\alpha \\in \\mathbb{R}$.\n",
+    "\n",
     "- Any vector space must contain the zero vector $\\mathbf{0}$ (why?).\n",
     "\n",
     "- Examples of vector space:  \n",
@@ -1038,10 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Span\n",
     "\n",
@@ -1051,13 +1041,8 @@
     "$$\n",
     "is a vector space in $\\mathbb{R}^n$.\n",
     "\n",
-    "    Proof: HW3."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: HW3.\n",
+    "\n",
     "## Four fundamental subspaces\n",
     "\n",
     "<img src=\"./four_fundamental_subspaces.png\" width=400 align=\"center\"/>\n",
@@ -1096,13 +1081,8 @@
     "\n",
     "TODO in class: show these 4 sets are vector spaces.\n",
     "\n",
-    "* Example: Draw the four subspaces of matrix $\\mathbf{A} = \\begin{pmatrix} 1 & -2 & -2 \\\\ 3 & -6 & -6 \\end{pmatrix}$. TODO in class."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Example: Draw the four subspaces of matrix $\\mathbf{A} = \\begin{pmatrix} 1 & -2 & -2 \\\\ 3 & -6 & -6 \\end{pmatrix}$. TODO in class.\n",
+    "\n",
     "## Effects of matrix multiplication on column/row space\n",
     "\n",
     "- $\\mathcal{C}(\\mathbf{C}) \\subseteq \\mathcal{C}(\\mathbf{A})$ if and only if $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ for some matrix $\\mathbf{B}$.\n",
@@ -1121,13 +1101,8 @@
     "\n",
     "    In words, left matrix multiplication expands the null space.\n",
     "\n",
-    "    Proof. For any $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{B})$, $\\mathbf{A} \\mathbf{B} \\mathbf{x} = \\mathbf{A} (\\mathbf{B} \\mathbf{x}) = \\mathbf{A} \\mathbf{0} = \\mathbf{0}$. Thus $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{A} \\mathbf{B})$.    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof. For any $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{B})$, $\\mathbf{A} \\mathbf{B} \\mathbf{x} = \\mathbf{A} (\\mathbf{B} \\mathbf{x}) = \\mathbf{A} \\mathbf{0} = \\mathbf{0}$. Thus $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{A} \\mathbf{B})$.    \n",
+    "\n",
     "## Essential disjointness of four fundamental subspaces\n",
     "\n",
     "- **Row space and null space of a matrix are essentially disjoint.** For any matrix $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$,\n",
@@ -1142,13 +1117,8 @@
     "\\mathcal{C}(\\mathbf{A}) \\cap \\mathcal{N}(\\mathbf{A}') = \\{\\mathbf{0}_m\\}.\n",
     "$$\n",
     "\n",
-    "    Proof: Apply above result to $\\mathbf{A}'$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: Apply above result to $\\mathbf{A}'$.  \n",
+    "\n",
     "## Null space of Gram matrix\n",
     "\n",
     "\\begin{eqnarray*}\n",
@@ -1173,15 +1143,8 @@
     "    &\\Rightarrow& \\mathbf{x} \\in \\mathcal{N}(\\mathbf{A}).\n",
     "\\end{eqnarray*} \n",
     "\n",
-    "For the second equation, we apply the first equation to $\\mathbf{B} = \\mathbf{A}'$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
-   "source": [
+    "For the second equation, we apply the first equation to $\\mathbf{B} = \\mathbf{A}'$. \n",
+    "\n",
     "## Basis of a subspace\n",
     "\n",
     "- [Eearlier in this class](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#basis), we talked about basis of $\\mathbb{R}^n$. Now we generalize the concept of basis to vector spaces.\n",
