--- a/slides/05-rank/05-rank.ipynb
+++ b/slides/05-rank/05-rank.ipynb
@@ -2,12 +2,10 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {
-    "toc": "true"
-   },
+   "metadata": {},
    "source": [
     "---\n",
-    "title: Rank and nullity\n",
+    "title: Rank and Nullity\n",
     "subtitle: Biostat 216\n",
     "author: Dr. Hua Zhou @ UCLA\n",
     "date: today\n",
@@ -29,18 +27,20 @@
    "source": [
     "**Highlights**: In this lecture we will show some most important results about the rank of a matrix:  \n",
     "\n",
-    "1. column rank = row rank.\n",
+    "1. For any $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, $\\text{rank}(\\mathbf{A}) \\le \\min \\{m, n\\}$.\n",
     "\n",
-    "2. Matrix multiplication can only decrease the rank:  \n",
+    "2. column rank = row rank.\n",
+    "\n",
+    "3. Matrix multiplication can only decrease the rank:  \n",
     "$\\text{rank}(\\mathbf{A} \\mathbf{B}) \\le \\text{rank}(\\mathbf{A})$  \n",
     "    $\\text{rank}(\\mathbf{A} \\mathbf{B}) \\le \\text{rank}(\\mathbf{B})$.  \n",
     "    Some special cases: (1) $\\text{rank}(\\mathbf{A} \\mathbf{B}) = \\text{rank}(\\mathbf{A})$ if $\\mathbf{B}$ has full row rank. (2) $\\text{rank}(\\mathbf{A} \\mathbf{B}) = \\text{rank}(\\mathbf{B})$ if $\\mathbf{A}$ has full column rank. (3). $\\text{rank}(\\mathbf{A}' \\mathbf{A}) = \\text{rank}(\\mathbf{A})$ for any $\\mathbf{A}$.\n",
     "   \n",
-    "3. $\\text{rank}(\\mathbf{A} + \\mathbf{B}) \\le \\text{rank}(\\mathbf{B}) + \\text{rank}(\\mathbf{B})$.\n",
+    "4. $\\text{rank}(\\mathbf{A} + \\mathbf{B}) \\le \\text{rank}(\\mathbf{B}) + \\text{rank}(\\mathbf{B})$.\n",
     "\n",
-    "4. Rank-nullity theorem: For any $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, $\\text{rank}(\\mathbf{A}) + \\text{nullity}(\\mathbf{A}) = n$.\n",
+    "5. Rank-nullity theorem: For any $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, $\\text{rank}(\\mathbf{A}) + \\text{nullity}(\\mathbf{A}) = n$.\n",
     "\n",
-    "5. Fundamental theorem of ranks: $\\text{rank}(\\mathbf{A}) = \\text{rank}(\\mathbf{A}') = \\text{rank}(\\mathbf{A}'\\mathbf{A}) = \\text{rank}(\\mathbf{A}\\mathbf{A}')$.\n",
+    "6. Fundamental theorem of ranks: $\\text{rank}(\\mathbf{A}) = \\text{rank}(\\mathbf{A}') = \\text{rank}(\\mathbf{A}'\\mathbf{A}) = \\text{rank}(\\mathbf{A}\\mathbf{A}')$.\n",
     "\n",
     "<img src=\"../04-vecsp/four_fundamental_subspaces.png\" width=400 align=\"center\"/>"
    ]
@@ -412,7 +412,7 @@
     "    \n",
     "    It is **full column rank** if $\\text{rank}(\\mathbf{A}) = n$.\n",
     "\n",
-    "- A square matrix $\\mathbf{A} \\in \\mathbb{R}^{n \\times n}$ is **singular** if $\\text{rank}(\\mathbf{A}) < n$ and **non-singular** or **invertible** if $\\text{rank}(\\mathbf{A}) = n$.\n",
+    "- A square matrix $\\mathbf{A} \\in \\mathbb{R}^{n \\times n}$ is **singular** if $\\text{rank}(\\mathbf{A}) < n$ and **non-singular** (or **invertible**) if $\\text{rank}(\\mathbf{A}) = n$.\n",
     "\n",
     "- Example: The identity matrix\n",
     "$$\n",
@@ -422,13 +422,8 @@
     "    0 & \\cdots & 1\n",
     "    \\end{pmatrix}\n",
     "$$\n",
-    "is full rank. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "is full rank. \n",
+    "\n",
     "## Effects of matrix multiplication on rank\n",
     "\n",
     "- $\\text{rank}(\\mathbf{A}\\mathbf{B}) \\le \\text{rank}(\\mathbf{A})$ and $\\text{rank}(\\mathbf{A}\\mathbf{B}) \\le \\text{rank}(\\mathbf{B})$. \n",
