link to midterm practice problems

--- a/_posts/2023-10-17-week3-day1.md
+++ b/_posts/2023-10-17-week3-day1.md
@@ -8,9 +8,11 @@ category: biostat216fall2023
 
 * HW2 graded.
 
-* Excellent job in $k$-means clustering.
+* HW3 posted, due Oct 23 @ 11:59PM.
 
-* Midterm: practice problems.
+* $k$-means clustering.
+
+* Midterm practice problems. [pdf](https://ucla-biostat-216.github.io/2023fall/hw/midterm/midterm_practice.pdf)
 
 ## Today
 
