--- a/slides/05-rank/05-rank.ipynb
+++ b/slides/05-rank/05-rank.ipynb
@@ -27,9 +27,9 @@
    "source": [
     "**Highlights**: In this lecture we will show some most important results about the rank of a matrix:  \n",
     "\n",
-    "1. For any $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, $\\text{rank}(\\mathbf{A}) \\le \\min \\{m, n\\}$.\n",
+    "1. column rank = row rank = rank.\n",
     "\n",
-    "2. column rank = row rank.\n",
+    "2. For any $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$, $\\text{rank}(\\mathbf{A}) \\le \\min \\{m, n\\}$.\n",
     "\n",
     "3. Matrix multiplication can only decrease the rank:  \n",
     "$\\text{rank}(\\mathbf{A} \\mathbf{B}) \\le \\text{rank}(\\mathbf{A})$  \n",
@@ -816,7 +816,7 @@
    "source": [
     "## Rank factorization (important)\n",
     "\n",
-    "- Let $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$ with rank $r \\ge 1$. The product $\\mathbf{A} = \\mathbf{C} \\mathbf{R}$, where $\\mathbf{C} \\in \\mathbb{R}^{m \\times r}$ and $\\mathbf{R} \\in \\mathbb{R}^{r \\times n}$ is called a **rank decomposition** or **rank factorization** of $\\mathbf{A}$.\n",
+    "- Let $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$ with (column) rank $r \\ge 1$. The product $\\mathbf{A} = \\mathbf{C} \\mathbf{R}$, where $\\mathbf{C} \\in \\mathbb{R}^{m \\times r}$ and $\\mathbf{R} \\in \\mathbb{R}^{r \\times n}$ is called a **rank decomposition** or **rank factorization** of $\\mathbf{A}$.\n",
     "\n",
     "- Visualize (TODO):\n",
     "$$\n",
