--- a/slides/05-rank/05-rank.qmd
+++ b/slides/05-rank/05-rank.qmd
@@ -28,9 +28,9 @@ jupyter:
 
 **Highlights**: In this lecture we will show some most important results about the rank of a matrix:  
 
-1. For any $\mathbf{A} \in \mathbb{R}^{m \times n}$, $\text{rank}(\mathbf{A}) \le \min \{m, n\}$.
+1. column rank = row rank = rank.
 
-2. column rank = row rank.
+2. For any $\mathbf{A} \in \mathbb{R}^{m \times n}$, $\text{rank}(\mathbf{A}) \le \min \{m, n\}$.
 
 3. Matrix multiplication can only decrease the rank:  
 $\text{rank}(\mathbf{A} \mathbf{B}) \le \text{rank}(\mathbf{A})$  
@@ -266,7 +266,7 @@ rank(A * A')
 
 ## Rank factorization (important)
 
-- Let $\mathbf{A} \in \mathbb{R}^{m \times n}$ with rank $r \ge 1$. The product $\mathbf{A} = \mathbf{C} \mathbf{R}$, where $\mathbf{C} \in \mathbb{R}^{m \times r}$ and $\mathbf{R} \in \mathbb{R}^{r \times n}$ is called a **rank decomposition** or **rank factorization** of $\mathbf{A}$.
+- Let $\mathbf{A} \in \mathbb{R}^{m \times n}$ with (column) rank $r \ge 1$. The product $\mathbf{A} = \mathbf{C} \mathbf{R}$, where $\mathbf{C} \in \mathbb{R}^{m \times r}$ and $\mathbf{R} \in \mathbb{R}^{r \times n}$ is called a **rank decomposition** or **rank factorization** of $\mathbf{A}$.
 
 - Visualize (TODO):
 $$
