--- a/_posts/2023-10-24-week4-day1.md
+++ b/_posts/2023-10-24-week4-day1.md
@@ -6,26 +6,28 @@ category: biostat216fall2023
 
 ## Announcement
 
-* 
+* [Introduction to Linear Algebra for Applied Machine Learning with Python](https://pabloinsente.github.io/intro-linear-algebra).
 
-## Today
+## Q&A
 
-- Cauchy-Schwarz proof.
+- [Cauchy-Schwarz](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#norm-distance-angle) proof.
 
-- Orthonormal expansion proof.
+- [Orthonormal expansion](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#orthonormal-basis) proof.
 
-- BV 10.11 on HW 3.
+- Relationships between [basis](https://ucla-biostat-216.github.io/2023fall/slides/04-vecsp/04-vecsp.html#basis-of-a-subspace), [span](https://ucla-biostat-216.github.io/2023fall/slides/04-vecsp/04-vecsp.html#span), and dimension.
 
-- BV 3.3 from HW 1.
+- Definition of [dimension](https://ucla-biostat-216.github.io/2023fall/slides/04-vecsp/04-vecsp.html#basis-of-a-subspace).
 
-- Problem 5 from practice midterm.
-
-- Relationships between basis, span, and dimension.
-
-- Definition of dimension.
-
-- Properties of convolutions (proof by polynomial interpretation).
+- Properties of [convolutions](https://ucla-biostat-216.github.io/2023fall/slides/03-matrix/03-matrix.html#convolution-and-filtering) (proof by polynomial interpretation).
 
 - How to find a basis of the null space? GS, (full) QR, SVD.
 
+- BV 3.3.
 
+- BV 8.5 (a) and (b).
+
+- BV 10.11.
+
+- HW3: Q5.
+
+- [Practice midterm](https://ucla-biostat-216.github.io/2023fall/hw/midterm/midterm_practice.pdf): Q4.6, Q5, Q6.3, Q7 last set.
