--- a/slides/04-vecsp/04-vecsp.ipynb
+++ b/slides/04-vecsp/04-vecsp.ipynb
@@ -1047,13 +1047,8 @@
     "$$\n",
     "is a vector space in $\\mathbb{R}^n$.\n",
     "\n",
-    "    Proof: HW3."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: HW3.\n",
+    "\n",
     "## Four fundamental subspaces\n",
     "\n",
     "<img src=\"./four_fundamental_subspaces.png\" width=400 align=\"center\"/>\n",
@@ -1092,13 +1087,8 @@
     "\n",
     "TODO in class: show these 4 sets are vector spaces.\n",
     "\n",
-    "* Example: Draw the four subspaces of matrix $\\mathbf{A} = \\begin{pmatrix} 1 & -2 & -2 \\\\ 3 & -6 & -6 \\end{pmatrix}$. TODO in class.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Example: Draw the four subspaces of matrix $\\mathbf{A} = \\begin{pmatrix} 1 & -2 & -2 \\\\ 3 & -6 & -6 \\end{pmatrix}$. TODO in class.\n",
+    "\n",
     "## Effects of matrix multiplication on column/row space\n",
     "\n",
     "- $\\mathcal{C}(\\mathbf{C}) \\subseteq \\mathcal{C}(\\mathbf{A})$ if and only if $\\mathbf{C} = \\mathbf{A} \\mathbf{B}$ for some matrix $\\mathbf{B}$.\n",
@@ -1117,13 +1107,8 @@
     "\n",
     "    In words, left matrix multiplication expands the null space.\n",
     "\n",
-    "    Proof. For any $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{B})$, $\\mathbf{A} \\mathbf{B} \\mathbf{x} = \\mathbf{A} (\\mathbf{B} \\mathbf{x}) = \\mathbf{A} \\mathbf{0} = \\mathbf{0}$. Thus $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{A} \\mathbf{B})$.    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof. For any $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{B})$, $\\mathbf{A} \\mathbf{B} \\mathbf{x} = \\mathbf{A} (\\mathbf{B} \\mathbf{x}) = \\mathbf{A} \\mathbf{0} = \\mathbf{0}$. Thus $\\mathbf{x} \\in \\mathcal{N}(\\mathbf{A} \\mathbf{B})$.    \n",
+    "\n",
     "## Essential disjointness of four fundamental subspaces\n",
     "\n",
     "- **Row space and null space of a matrix are essentially disjoint.** For any matrix $\\mathbf{A} \\in \\mathbb{R}^{m \\times n}$,\n",
@@ -1138,13 +1123,8 @@
     "\\mathcal{C}(\\mathbf{A}) \\cap \\mathcal{N}(\\mathbf{A}') = \\{\\mathbf{0}_m\\}.\n",
     "$$\n",
     "\n",
-    "    Proof: Apply above result to $\\mathbf{A}'$.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Proof: Apply above result to $\\mathbf{A}'$.  \n",
+    "\n",
     "## Null space of Gram matrix\n",
     "\n",
     "\\begin{eqnarray*}\n",
@@ -1169,13 +1149,8 @@
     "    &\\Rightarrow& \\mathbf{x} \\in \\mathcal{N}(\\mathbf{A}).\n",
     "\\end{eqnarray*} \n",
     "\n",
-    "For the second equation, we apply the first equation to $\\mathbf{B} = \\mathbf{A}'$. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "For the second equation, we apply the first equation to $\\mathbf{B} = \\mathbf{A}'$. \n",
+    "\n",
     "## Basis of a subspace\n",
     "\n",
     "- [Eearlier in this class](https://ucla-biostat-216.github.io/2023fall/slides/02-vector/02-vector.html#basis), we talked about basis of $\\mathbb{R}^n$. Now we generalize the concept of basis to vector spaces.\n",
@@ -1225,7 +1200,7 @@
     "    2. the maximmal number of linearly independent vectors in $\\mathcal{S}$, **or**\n",
     "    3. the minimal number of vectors that span $\\mathcal{S}$. \n",
     "\n",
-    "    To see the equivalence between 1 and 2. Let $M$ be maximmal number of linearly independent vectors in $\\mathcal{S}$. If $\\mathbf{a}_1, \\ldots, \\mathbf{a}_M \\in \\mathcal{S}$ are linearly independent, then they must span $\\mathcal{S}$, otherwise we can add more linearly independent vector(s) to the collection, conflicting with $M$ is the maximmal number of linearly independent vectors in $\\mathcal{S}$. Therefore $\\mathbf{a}_1, \\ldots, \\mathbf{a}_M$ is a basis and $M = \\text{dim}(\\mathcal{S})$.  \n",
+    "    To see the equivalence between 1 and 2. Let $M$ be maximal number of linearly independent vectors in $\\mathcal{S}$. If $\\mathbf{a}_1, \\ldots, \\mathbf{a}_M \\in \\mathcal{S}$ are linearly independent, then they must span $\\mathcal{S}$, otherwise we can add more linearly independent vector(s) to the collection, conflicting with $M$ is the maximal number of linearly independent vectors in $\\mathcal{S}$. Therefore $\\mathbf{a}_1, \\ldots, \\mathbf{a}_M$ is a basis and $M = \\text{dim}(\\mathcal{S})$.  \n",
     "    \n",
     "    To see the equivalence between 1 and 3. Let $m$ be the minimal number of vectors that span $\\mathcal{S}$. Suppose $\\mathbf{a}_1, \\ldots, \\mathbf{a}_m$ span $\\mathcal{S}$ and linearly dependent. Then we can take out one or more $\\mathbf{a}_i$ and the remaining vectors still span $\\mathcal{S}$. Therefore $\\mathbf{a}_1, \\ldots, \\mathbf{a}_m$ must be linearly independent and thus a basis. Therefore $m = \\text{dim}(\\mathcal{S})$.\n",
     "\n",
