--- a/slides/05-rank/05-rank.ipynb
+++ b/slides/05-rank/05-rank.ipynb
@@ -441,7 +441,7 @@
     "$$\n",
     "where $\\mathbf{B}_1 \\in \\mathbb{R}^{m \\times m}$ is non-singular and $\\mathbf{B}_2 \\in \\mathbb{R}^{m \\times (n-m)}$. Then\n",
     "$$\n",
-    "    \\text{rank}(\\mathbf{A}) \\ge \\text{rank}(\\mathbf{A}\\mathbf{B}) = \\text{rank}(\\mathbf{A} \\begin{pmatrix} \\mathbf{B}_1 : \\mathbf{B}_2 \\end{pmatrix} \\mathbf{P}') \\ge \\text{rank} \\left( \\mathbf{A} \\begin{pmatrix} \\mathbf{B}_1 : \\mathbf{B}_2 \\end{pmatrix} \\mathbf{P}' \\mathbf{P} \\begin{pmatrix} \\mathbf{B}_1^{-1} \\\\ \\mathbf{O} \\end{pmatrix} \\right) = \\text{rank} (\\mathbf{A} \\mathbf{I}_n) = \\text{rank} (\\mathbf{A}).\n",
+    "    \\text{rank}(\\mathbf{A}) \\ge \\text{rank}(\\mathbf{A}\\mathbf{B}) = \\text{rank}(\\mathbf{A} \\begin{pmatrix} \\mathbf{B}_1 : \\mathbf{B}_2 \\end{pmatrix} \\mathbf{P}') \\ge \\text{rank} \\left( \\mathbf{A} \\begin{pmatrix} \\mathbf{B}_1 : \\mathbf{B}_2 \\end{pmatrix} \\mathbf{P}' \\mathbf{P} \\begin{pmatrix} \\mathbf{B}_1^{-1} \\\\ \\mathbf{O} \\end{pmatrix} \\right) = \\text{rank} (\\mathbf{A} \\mathbf{I}_m) = \\text{rank} (\\mathbf{A}).\n",
     "$$\n",
     "Thus $\\text{rank}(\\mathbf{A}) = \\text{rank} (\\mathbf{A} \\mathbf{B})$. Proof for the other half of the statement follows the same argument.\n",
     "    \n",
